# ml-portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
Classification/: iris_flower.ipynb
EDA/: eda_tabular.ipynb
regression/house_price_ames/: __init__.py  config.py
regression/house_price_ames/notebooks/: house_price_pred.ipynb
regression/house_price_ames/src/data/: __init__.py  intake.py
scripts/: make_project_tree.py
src/viz/: __init__.py  barplot.py  boxplot.py  corr_table.py  decision_boundary_plot.py  decision_plot_beast.py  heatmap.py  histogram.py  scatterplot.py
