[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viz"
version = "0.0.1"
description = "Reusable viz helpers for ML portfolio"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy",
"pandas",
"matplotlib",
"seaborn>=0.11"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]